myopenshiftproject/hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: myredhat0101-dev
spec:
  selector:
    app: hub
  ports:
    - port: 8080
      targetPort: 8080
